--- a/oorax/templates/registration/cour_register_form.html
+++ b/oorax/templates/registration/cour_register_form.html
@@ -6,7 +6,7 @@
 <body>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <form method="post" action="">
+    <form method="post" action="" enctype="multipart/form-data">
 
     {% csrf_token %}
     {{ form.as_p }}
