--- a/oorax/templates/registration/home.html
+++ b/oorax/templates/registration/home.html
@@ -1,68 +1,171 @@
-{% extends "base.html" %}
+
 
 {% block content %}
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+     <!-- pour editeur de texte debut -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="http://cdn.wysibb.com/js/jquery.wysibb.min.js"></script>
+	<link rel="stylesheet" href="http://cdn.wysibb.com/css/default/wbbtheme.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+      <!--Let browser know website is optimized for mobile-->
+
 
 <body>
 
 
  {% if user.is_superuser %}
+  <nav class="nav-extended">
 
-        <table>
-            <thead> <!-- En-tête du tableau -->
-               <tr>
-                   <th>N</th>
-                   <th>Titre</th>
-                   <th>Prix</th>
-                   <th>Actions</th>
-               </tr>
-            </thead>
+        <div class="nav-wrapper">
 
-            {% for u in cours %}
-                {% if u.etat_cour is False %}
+          <a href="#!" class="brand-logo bottom">Aide Scolaire</a>
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+          <a href="mobile.html" class="brand-logo right"><i class="material-icons">more_vert</i></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="sass.html">Sass</a></li>
+            <li><a href="badges.html">Components</a></li>
+            <li><a href="collapsible.html">Javascript</a></li>
+            <li><a href="mobile.html">Mobile</a></li>
+          </ul>
+        </div>
 
-            <tr>
-                <td>{{ u.id }}</td>
-                <td>{{ u.titre }} </td>
-                <td> {{ u.prix }}</td>
-                <td>
-                     <a href="{% url 'inscription' u.id %}">
-                         <button type="button" class="btn btn-primary">Inscription</button>
-                     </a>
-                </td>
-            </tr>
-                {% endif %}
-            {% endfor %}
-        </table>
+  </nav>
+
+  <ul class="sidenav" id="mobile-demo">
+    <li><a href="sass.html">Sass</a></li>
+    <li><a href="badges.html">Components</a></li>
+    <li><a href="collapsible.html">Javascript</a></li>
+    <li><a href="mobile.html">Mobile</a></li>
+    <li><a class="sidenav-close" href="#!"><i class="large material-icons">close</i></a></li>
+  </ul>
+
+<div class="row">
+
+    <!--slider debut -->
+      <div class="slider">
+    <ul class="slides">
+      <li>
+        <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
+        <div class="caption center-align">
+          <h3>This is our big Tagline!</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="https://lorempixel.com/580/250/nature/2"> <!-- random image -->
+        <div class="caption left-align">
+          <h3>Left Aligned Caption</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="https://lorempixel.com/580/250/nature/3"> <!-- random image -->
+        <div class="caption right-align">
+          <h3>Right Aligned Caption</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="https://lorempixel.com/580/250/nature/4"> <!-- random image -->
+        <div class="caption center-align">
+          <h3>This is our big Tagline!</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+    </ul>
+  </div>
+<!--slider fin-->
+<div class="card">
+    <div class="cards-tabs">
+      <ul class="tabs tabs-fixed-width">
+        <li class="tab"><a href="#test4" class="active" >Test 1</a></li>
+        <li class="tab"><a href="#test5" >Test 2</a></li>
+
+      </ul>
+    </div>
+    <div class="card-content grey lighten-4">
+      <div id="test4">Test 1</div>
+      <div id="test5">Test 2</div>
+    </div>
+  </div>
+
+    <div class="container">
+        {% for u in cours %}
+      <div class="card">
+             {% if u.etat_cour is False %}
+        <div class="card-image">
+            {% if u.image is not Null %}
+           <img src='{{ u.image.url }}' alt="{{ u.image.name }}"  width="100">
+            {% endif %}
+          <span id="spancolor" class="card-title">{{ u.titre }}</span>
+        </div>
+        <div class="card-content">
+          <p>{{ u.description }}</p>
+        </div>
+        <div class="card-action">
+          <a href="{% url 'inscription' u.id %}">
+             <button type="button" class="btn btn-primary">Inscription</button>
+          </a>
+             <span class="badge red " id="prixcolor">{{ u.prix }} fcfa</span>
+        </div>
+
+     {% endif %}
+      </div>
+         {% endfor %}
+    </div>
+
+  </div>
+
 
  {% else %}
     <p>Vous n'etes pas autoriser</p>
 {% endif %}
+<script>
+     document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.sidenav');
+    var instances = M.Sidenav.init(elems, options);
+  });
 
+  // Or with jQuery
+
+  $(document).ready(function(){
+    $('.sidenav').sidenav();
+  });
+ document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.slider');
+    var instances = M.Slider.init(elems, options);
+  });
+
+  // Or with jQuery
+
+  $(document).ready(function(){
+    $('.slider').slider();
+  });
+
+</script>
 </body>
 <style>
-    td /* Toutes les cellules des tableaux... */
-{
-    border: 1px solid black; /* auront une bordure de 1px */
-     padding:15px;
-}
-table
-{
-    border-collapse: collapse; /* Les bordures du tableau seront collées (plus joli) */
-     padding:15px;
-}
-td
-{
-    border: 1px solid black;
-    padding:15px;
-}
 
-th
-{
-    border: 1px solid black;
-    padding:15px;
+span#prixcolor {
+    color: white;
+}
+@media screen and (min-width: 200px) and (max-width: 640px) {
+  .bloc {
+    display:block;
+    clear:both;
+  }
+  body {
+    background: #ebebeb;
+  }
+#spancolor{
+color:#1a237e;
+}
+span#prixcolor {
+    color: white;
+}
 }
 </style>
 {% endblock %}
