--- a/oorax/templates/registration/home.html
+++ b/oorax/templates/registration/home.html
@@ -4,8 +4,8 @@
 
      <!-- pour editeur de texte debut -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="http://cdn.wysibb.com/js/jquery.wysibb.min.js"></script>
-	<link rel="stylesheet" href="http://cdn.wysibb.com/css/default/wbbtheme.css" />
+	  <script src="http://cdn.wysibb.com/js/jquery.wysibb.min.js"></script>
+	  <link rel="stylesheet" href="http://cdn.wysibb.com/css/default/wbbtheme.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified JavaScript -->
@@ -152,7 +152,7 @@
 span#prixcolor {
     color: white;
 }
-@media screen and (min-width: 200px) and (max-width: 640px) {
+@media only screen and (min-width: 200px) and (max-width: 640px) {
   .bloc {
     display:block;
     clear:both;
