--- a/oorax/templates/registration/index.html
+++ b/oorax/templates/registration/index.html
@@ -5,159 +5,54 @@
     <head>
         <meta charset="UTF-8">
          <!-- pour editeur de texte debut -->
-    
-         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    
-           <!-- pour editeur de texte fin -->
-    
-         <!--Import Google Icon Font-->
-          <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-          <!--Import materialize.css-->
-          <link type="text/css" rel="stylesheet" href= "{% static 'materialize/css/materialize.min.css' %}"  media="screen,projection"/>
-          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
-    
-        <!-- Compiled and minified JavaScript -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-    
-          <!--Let browser know website is optimized for mobile-->
-        <script type="text/javascript" src=" {% static 'materialize/js/materialize.min.js' %}"></script>
-    
-          <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Title</title>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script type="text/javascript" src=" {% static 'materialize/js/materialize.min.js' %}"></script>
+        <script type="text/javascript" src=" {% static 'materialize/js/perso.js' %}"></script>
+        <link type="text/css" rel="stylesheet" href= "{% static 'materialize/css/materialize.min.css' %}"  media="screen,projection"/>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link type="text/css" rel="stylesheet"  href= "{% static 'materialize/css/perso.css' %}"  media="screen,projection"/>
+
     </head>
+
     <body>
-    <nav>
-
-        <div class="nav-wrapper">
-          <a href="#!" class="brand-logo ">Oorax.ci</a>
-
-             <div class="input-field brand-logo right">
-                          <input id="search" type="search" required>
-                          <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                          <i class="material-icons">close</i>
-             </div>
-
-          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-          <ul class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">Javascript</a></li>
-            <li><a href="mobile.html">Mobile</a></li>
-          </ul>
-
+        <div class="row">
+                <nav id="mysearch-bar2">
+                        <div class="nav-wrapper">
+                          <a href="#!" class="brand-logo">Logo</a>
+                          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                          <ul class="right hide-on-med-and-down">
+                            <li><a href="sass.html">S'inscrire</a></li>
+                            <li><a href="mobile.html">Se connecter</a></li>
+                          </ul>
+                        </div>
+                      </nav>
+                    
+                      <ul class="sidenav" id="mobile-demo">
+                        <li><a href="sass.html">Sass</a></li>
+                        <li><a href="badges.html">Components</a></li>
+                        <li><a href="collapsible.html">Javascript</a></li>
+                        <li><a href="mobile.html">Mobile</a></li>
+                      </ul>
         </div>
-  </nav>
 
-  <ul class="sidenav" id="mobile-demo">
-    <li><a href="sass.html">Sass</a></li>
-    <li><a href="badges.html">Components</a></li>
-    <li><a href="collapsible.html">Javascript</a></li>
-    <li><a href="mobile.html">Mobile</a></li>
-    <li><a class="sidenav-close" href="#!"><i class="large material-icons">close</i></a></li>
-  </ul>
+        <div class="container" >
+                <h1 class="center-align titre">Trouve vite</h1>
+            <nav id="mysearch-bar">
+                <div class="nav-wrapper">
+                <form action="/search/" method="get">
+                    <div class="input-field">
+                        <input type="text" name="q" id="q" placeholder="recherchez sur trouve vite"/>
+                    </div>
+                </form>
+                </div>
+            </nav>
+        </div>
 
-
-    <div class="row">
-        <div class="blue-grey col s12 m12">
-            <img src="{% static 'img/pub.jpg' %}" alt="UML diagram" style="width:100%;height:100px;">
-            </div><br>
-      <div class="container">
-
-          <div class="col s1"></div>
-          <div class="col s10">
-
-              <div class="col s6 m6 l6 card-panel  padding-right-s3 bordure">
-                  <h3 class="flow-text center"><a href="home.html"> <i class="large material-icons iconcolor">headset_mic</i></a><br>Aide scolaire</h3>
-              </div>
-
-              <div class="col s6 m6 l6 card-panel padding-right-s bordure">
-                  <h3 class="flow-text center"><i class="large material-icons iconcolor">access_alarms</i><br>Examen et concour</h3>
-              </div>
-
-
-              <div class="col s6 m6 l6 card-panel  padding-right-s3 bordure">
-                  <h3 class="flow-text center"><i class="large material-icons iconcolor">donut_small</i><br>Professionnel</h3>
-              </div>
-
-
-              <div class="col s6 m6 l6 card-panel  padding-right-s bordure">
-                  <h3 class="flow-text center"><i class="large material-icons iconcolor">poll</i><br>Sondage</h3>
-              </div>
-
-              <div class="col s6 m6 l6 card-panel  padding-right-s3 bordure">
-                  <h3 class="flow-text center"><i class="large material-icons iconcolor">add</i><br>Aide universitaire</h3>
-              </div>
-
-
-              <div class="col s6 m6 l6 card-panel  padding-right-s bordure">
-                  <h3 class="flow-text center"><i class="large material-icons iconcolor">perm_contact_calendar</i><br>Contact</h3>
-              </div>
-          </div>
-          <div class="col s1"></div>
-
-      </div>
-    </div>
-    </div>
-
-
-    <script>
-    document.addEventListener('DOMContentLoaded', function() {
-    var elems = document.querySelectorAll('.sidenav');
-    var instances = M.Sidenav.init(elems, options);
-  });
-
-  // Or with jQuery
-
-  $(document).ready(function(){
-    $('.sidenav').sidenav();
-  });
-
-    </script>
     </body>
-  <style>
-      /*.padding-right-s3 {
-    margin-left: -15px;
-    margin-right: 15px;
-}*/
-.iconcolor{
-    color:#ee6e73;
-    }
-.bordure{
-    border:1px solid #1a237e;
-    padding:20px;
-    box-sizing:border-box;
-    }
-
-.center {
-    font-size: 1.2rem;
-    text-align: center;
-}
-body {
-  background: green;
-  }
-
-@media screen and (min-width: 200px) and (max-width: 640px) {
-  .bloc {
-    display:block;
-    clear:both;
-  }
-  body {
-    background: #ebebeb;
-  }
-  .col.s6.padding-right-s3 {
-    margin-left: -15px;
-    margin-right: 15px;
-    }
-    .bordure{
-    border:1px solid #1a237e;
-    padding:20px;
-    box-sizing:border-box;
-    }
-
-
-}
-
-  </style>
 </html>
+
 {% endblock %}
-        
+ 
+      
