--- a/oorax/static/materialize/css/perso.css
+++ b/oorax/static/materialize/css/perso.css
@@ -27,10 +27,14 @@ nav#mysearch-bar2 a:hover{
 
 }
 
-input#q{
+input#search{
     font-size: 25px;
 }
-
+  .ui-autocomplete {
+            curseur: pointeur;
+            hauteur: 120px;
+            overflow-y: défiler;
+        }
 @media screen and (min-width: 200px) and (max-width: 640px) {
      nav#mysearch-bar {
        background-color: white;
@@ -40,6 +44,9 @@ input#q{
        width:85%;
        box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
     }
-
-
-}
+ .ui-autocomplete {
+            cursor:pointer;
+            height:120px;
+            overflow-y:scroll;
+            border:1px solid black;
+        }    }
