--- a/oorax/templates/registration/question.html
+++ b/oorax/templates/registration/question.html
@@ -12,7 +12,7 @@
             <option value="{{ chapitre.nom_chapitre }}">{{ chapitre.nom_chapitre }}</option>
             {% endfor %}
          </select>
-<label> Selectionner un Chapitre</label>
+<label> Selectionner une Lesson</label>
         <select name ="lesson" id="lesson">
             <option value="">---------</option>
 
