--- a/oorax/templates/registration/achat_lesson.html
+++ b/oorax/templates/registration/achat_lesson.html
@@ -14,10 +14,10 @@
      {{ form.as_p }}
 
 
-<input type="hidden" name="courid"  id="courid" value="{{ id }}">
+<input type="hidden" name="chapid"  id="chapid" value="{{ id }}">
 
 <input type="hidden" name="users"  id="users" value="{{ user.id }}">
-<input type="submit" value="Cheter">
+<input type="submit" value="Acheter">
  </form>
 
 <script>
@@ -29,7 +29,7 @@ $(document).on('submit','#formulaire',function(e){
         type:'POST',
         url:'{% url 'achat' %}',
         data:{
-            courid:$("input[name=courid]").val(),
+            chapid:$("input[name=chapid]").val(),
             users:$("input[name=users]").val(),
 
           csrfmiddlewaretoken:$("input[name=csrfmiddlewaretoken]").val()
